testdata/baselines/reference/submodule/conformance/classWithStaticFieldInParameterBindingPattern(target=es2015).errors.txt
classWithStaticFieldInParameterBindingPattern.ts(2,6): error TS2537: Type '{}' has no matching index signature for type 'number'.


==== classWithStaticFieldInParameterBindingPattern.ts (1 errors) ====
    // https://github.com/microsoft/TypeScript/issues/36295
    (({ [class { static x = 1 }.x]: b = "" }) => {})();
         ~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2537: Type '{}' has no matching index signature for type 'number'.